mesh编辑器框架

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2209,6 +2209,22 @@
 				RelativePath="..\..\..\src\drag2d\algorithms\SGI.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\common\Triangle\triangle.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\common\Triangle\triangle.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\Triangulation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\Triangulation.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="sprites"
