--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ deprecated
 /editor_src2/easyshape/src/easyshape
 /editor_src2/easydb/platform/msvc2008/easydb
 /editor_src2/easydb/platform/msvc2008/easydb_cl
+/editor_src2/easymesh/platform/msvc2008/easymesh
+/editor_src2/easymesh/platform/msvc2008/libmesh
 /editor_src2/drag2d/src/common/libpng/contrib
 /editor_src2/libraries/lua-5.2.3/doc
 /editor_src2/libraries/lua-5.2.3/lua
