增加mesh编辑方式

--- a/editor_src2/easymesh/platform/msvc2008/projects/libmesh.vcproj
+++ b/editor_src2/easymesh/platform/msvc2008/projects/libmesh.vcproj
@@ -291,6 +291,14 @@
 					RelativePath="..\..\..\src\libmesh\EditMeshOP.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\SelectNodesOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\SelectNodesOP.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
