[ADDED] 动画播放空格暂停

--- a/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -331,6 +331,22 @@
 					RelativePath="..\..\..\src\easyanimation\view\PreviewDialog.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\view\PreviewOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\view\PreviewOP.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\view\PreviewSettings.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\view\PreviewSettings.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="stage"
