[ADDED] 对象捕捉开关

--- a/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/editor_src2/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2108,6 +2108,14 @@
 					RelativePath="..\..\..\src\drag2d\view\Frame.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\SettingsDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\SettingsDialog.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
