[ADDED] 删除重复的图并修复文件的链接

--- a/editor_src2/easydb/platform/msvc2008/projects/easydb.vcproj
+++ b/editor_src2/easydb/platform/msvc2008/projects/easydb.vcproj
@@ -301,6 +301,26 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="fix"
+			>
+			<File
+				RelativePath="..\..\..\src\easydb\FixImages.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FixImages.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="tools"
+			>
+			<File
+				RelativePath="..\..\..\src\easydb\filetools.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
