[ADDED] 抽象出动画preview的控制，加上空格reset功能

--- a/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -324,6 +324,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easyanimation\view\PreviewControl.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easyanimation\view\PreviewDialog.cpp"
 					>
 				</File>
