[CHANGED] 重构anim中的keyDown响应，并把prev，next改为对关键帧的操作

--- a/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/editor_src2/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -524,6 +524,18 @@
 				Name="mesh"
 				>
 			</Filter>
+			<Filter
+				Name="tools"
+				>
+				<File
+					RelativePath="..\..\..\src\easyanimation\edit\KeyDownHandler.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\edit\KeyDownHandler.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
