[CHANGED] 数据部分移到libparticle中

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ deprecated
 /editor_src2/easyparticle/.svn
 /editor_src2/easyparticle2d/platform/msvc2008/easyparticle2d
 /editor_src2/easyparticle3d/platform/msvc2008/easyparticle3d
+/editor_src2/easyparticle3d/platform/msvc2008/libparticle3d
 /editor_src2/easyshape/.git
 /editor_src2/easyshape/platform/msvc2008/easyshape
 /editor_src2/easyshape/platform/msvc2008/libshape
