--- a/editor_src2/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
+++ b/editor_src2/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
@@ -194,6 +194,14 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath="..\..\..\src\easycomplex\Frame.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easycomplex\Frame.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easycomplex\main.cpp"
 			>
 		</File>
